// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketListActions component should display options for agents assignations 1`] = `
<div
  className="d-inline-flex align-items-center hidden-sm-down"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Set status
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Assign to:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          foo
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          bar
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          baz
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={false}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Add tag:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display special actions for trash view 1`] = `
<div
  className="d-inline-flex align-items-center hidden-sm-down"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Set status
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Assign to:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Add tag:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Undelete
        </DropdownItem>
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete forever
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display when nothing is selected 1`] = `
<div
  className="d-inline-flex align-items-center hidden-sm-down"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Set status
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={true}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      />
      <DropdownMenu
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Assign to:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={true}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Add tag:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={true}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          0
           
          ticket
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
  </div>
</div>
`;

exports[`TicketListActions component should display when some tickets are selected 1`] = `
<div
  className="d-inline-flex align-items-center hidden-sm-down"
>
  <div
    className="d-inline-flex align-items-center"
  >
    <UncontrolledButtonDropdown
      className="mr-2"
      size="sm"
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Close
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        tag="div"
      >
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Set status
        </DropdownItem>
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Open
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <Button
        color="secondary"
        disabled={false}
        onClick={[Function]}
        tag="button"
        type="button"
      >
        Assign to me
      </Button>
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      />
      <DropdownMenu
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Assign to:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          header={true}
          tag="button"
          toggle={true}
        >
          Could not find any agent
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          <span
            className="text-warning"
            style={
              Object {
                "textTransform": "none",
              }
            }
          >
            Clear assignee
          </span>
        </DropdownItem>
      </DropdownMenu>
    </ButtonDropdown>
    <ButtonDropdown
      className="mr-2"
      isOpen={false}
      size="sm"
      toggle={[Function]}
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        type="button"
      >
        Add tag
      </DropdownToggle>
      <DropdownMenu
        disabled={false}
        right={true}
        style={
          Object {
            "width": "230px",
          }
        }
        tag="div"
      >
        <DropdownItem
          className="dropdown-item-input"
          header={true}
          tag="button"
          toggle={true}
        >
          <div
            className="mb-2"
          >
            Add tag:
          </div>
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
      </DropdownMenu>
    </ButtonDropdown>
    <UncontrolledButtonDropdown
      size="sm"
    >
      <DropdownToggle
        aria-haspopup={true}
        caret={true}
        color="secondary"
        data-toggle="dropdown"
        disabled={false}
        id="bulk-more-button"
        type="button"
      >
        More
      </DropdownToggle>
      <DropdownMenu
        right={true}
        tag="div"
      >
        <DropdownItem
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Apply macro
        </DropdownItem>
        <DropdownItem
          divider={true}
          tag="button"
          toggle={true}
        />
        <DropdownItem
          className="text-danger"
          onClick={[Function]}
          tag="button"
          toggle={true}
          type="button"
        >
          Delete
        </DropdownItem>
      </DropdownMenu>
    </UncontrolledButtonDropdown>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
          ?
        </p>
        <Button
          autoFocus={true}
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
    <Popover
      isOpen={false}
      placement="bottom"
      target="bulk-more-button"
      toggle={[Function]}
    >
      <PopoverTitle
        tag="h3"
      >
        Are you sure?
      </PopoverTitle>
      <PopoverContent
        tag="div"
      >
        <p>
          Are you sure you want to delete 
          5
           
          ticket
          s
           forever?
        </p>
        <Button
          color="success"
          onClick={[Function]}
          tag="button"
          type="submit"
        >
          Confirm
        </Button>
      </PopoverContent>
    </Popover>
  </div>
</div>
`;
